--- a/case-original/furama-management/src/Components/customers/customer.css
+++ b/case-original/furama-management/src/Components/customers/customer.css
@@ -1,18 +1,17 @@
 #bd {
     border: 1px solid;
-    margin-left: 641px;
+    margin: 30px auto;
     width: 30%;
-    margin-top: 30px;
     text-align: center;
     color: black;
     border-radius: 10px;
     background-color: white;
-    box-shadow: 10px 10px 20px #51504B;
-    font-family: cursive;
+    box-shadow: 4px 4px 8px #51504B;
+    font-family: Lucida Grande, Lucida Sans, Arial, sans-serif;
 }
 .btn {
     margin-bottom: 10px;
-    box-shadow: 10px 10px 20px #51504B
+    box-shadow: 4px 4px 8px #51504B;
 }
 body {
     background-color: #EAE9E5;
@@ -25,7 +24,7 @@ body {
     border-radius: 10px;
 }
 .card-body {
-    box-shadow: 10px 10px 20px #51504B;
+    box-shadow: 4px 4px 8px #51504B;
     background-color: white;
 }
 td,th{
