--- a/case-original/furama-management/src/index.css
+++ b/case-original/furama-management/src/index.css
@@ -1,9 +1,9 @@
 body{
-  background-color: #EAE9E5;
+  background-color: #FFFFFF;
 }
 h2{
   border: 1px solid;
-  font-family: cursive;
+  font-family: Lucida Grande, Lucida Sans, Arial, sans-serif;
   font-size: 50px;
   margin-top: 5px;
   margin-bottom: 25px;
@@ -15,13 +15,13 @@ h2{
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 30%;
+  /*margin-left: 30%;*/
 
 }
 .card{
   height: 400px;
-  margin-top: 5%;
-  margin-left: 20%;
+  margin-top: 10%;
+  margin-left: 10%;
   box-shadow: 10px 10px 20px #51504B;
 }
 .carousel-inner{
@@ -42,7 +42,7 @@ img{
 }
 .card{
   width: 20rem;
-  height: 500px;
+  height: 400px;
 }
 Footer{
   margin-top: 15px;
@@ -63,7 +63,7 @@ Footer{
   font-size: 70px;
   font-weight: bold;
   margin-bottom: 10px;
-  font-family: cursive;
+  font-family: Lucida Grande, Lucida Sans, Arial, sans-serif;
 }
 .error{
   color: red;
